--- a/index.html
+++ b/index.html
@@ -1,5 +1,8 @@
-<html>
+<!doctype html>
+<html lang="en">
   <head>
+    <meta charset="utf-8">
+    <title>Kunal Mehta (kmeht)</title>
     <link href="https://fonts.googleapis.com/css?family=Source+Sans+Pro:400,200,200italic,300,300italic,400italic,600,600italic,700,700italic,900italic,900" rel="stylesheet" type="text/css">
     <link href="/style.css" rel="stylesheet" type="text/css">
   </head>
@@ -15,12 +18,12 @@
       <div class="intro">
         <h1>Hi! My name is Kunal.</h1>
         <p>I'm currently a software engineer on the <a href="https://www.messenger.com/">Messenger</a> team at <a href="https://www.facebook.com/careers/">Facebook</a>.</p>
-        <p class="contact">
-          <a href="https://www.github.com/kmeht">GitHub</a>
-          <a href="https://www.linkedin.com/in/kmeht">LinkedIn</a>
-          <a href="https://www.messenger.com/t/kmeht">Messenger</a>
-          <a href="mailto:kunalm@fb.com">Email</a>
-        </p>
+        <ul class="contact">
+          <li><a href="https://www.github.com/kmeht">GitHub</a></li>
+          <li><a href="https://www.linkedin.com/in/kmeht">LinkedIn</a></li>
+          <li><a href="https://www.messenger.com/t/kmeht">Messenger</a></li>
+          <li><a href="mailto:kunalm@fb.com">Email</a></li>
+        </ul>
       </div>
     </div>
   </body>
