--- a/index.html
+++ b/index.html
@@ -3,26 +3,37 @@
   <head>
     <meta charset="utf-8">
     <title>Kunal Mehta (kmeht)</title>
+    <meta name="author" content="Kunal Mehta">
+    <meta name="description" content="I'm a software engineer on the Messenger team at Facebook.">
     <link href="https://fonts.googleapis.com/css?family=Source+Sans+Pro:400,200,200italic,300,300italic,400italic,600,600italic,700,700italic,900italic,900" rel="stylesheet" type="text/css">
     <link href="/style.css" rel="stylesheet" type="text/css">
   </head>
   <body>
-    <div class="header">
-      <h3>
-        <a class="header-link" href="/">
-          kmeht
-        </a>
-      </h3>
-    </div>
     <div class="intro-container">
       <div class="intro">
         <h1>Hi! My name is Kunal.</h1>
         <p>I'm currently a software engineer on the <a href="https://www.messenger.com/">Messenger</a> team at <a href="https://www.facebook.com/careers/">Facebook</a>.</p>
         <ul class="contact">
-          <li><a href="https://www.github.com/kmeht">GitHub</a></li>
-          <li><a href="https://www.linkedin.com/in/kmeht">LinkedIn</a></li>
-          <li><a href="https://www.messenger.com/t/kmeht">Messenger</a></li>
-          <li><a href="mailto:kunalm@fb.com">Email</a></li>
+          <li>
+            <a href="https://www.github.com/kmeht" target="_blank">
+              GitHub
+            </a>
+          </li>
+          <li>
+            <a href="https://www.linkedin.com/in/kmeht" target="_blank">
+              LinkedIn
+            </a>
+          </li>
+          <li>
+            <a href="https://www.messenger.com/t/kmeht" target="_blank">
+              Messenger
+            </a>
+          </li>
+          <li>
+            <a href="mailto:kunalm@fb.com">
+              Email
+            </a>
+          </li>
         </ul>
       </div>
     </div>
