Viewport meta tag and adjusted media queries.

--- a/index.html
+++ b/index.html
@@ -5,6 +5,7 @@
     <title>Kunal Mehta (kmeht)</title>
     <meta name="author" content="Kunal Mehta">
     <meta name="description" content="I'm a software engineer on the Messenger team at Facebook.">
+    <meta name="viewport" content="width=device-width">
     <link href="https://fonts.googleapis.com/css?family=Source+Sans+Pro:400,200,200italic,300,300italic,400italic,600,600italic,700,700italic,900italic,900" rel="stylesheet" type="text/css">
     <link href="/style.css" rel="stylesheet" type="text/css">
   </head>
@@ -12,7 +13,7 @@
     <div class="intro-container">
       <div class="intro">
         <h1>Hi! My name is Kunal.</h1>
-        <p>I'm currently a software engineer on the <a href="https://www.messenger.com/">Messenger</a> team at <a href="https://www.facebook.com/careers/">Facebook</a>.</p>
+        <p>I'm currently a software engineer on the <a href="https://www.messenger.com/" target="_blank">Messenger</a> team at <a href="https://www.facebook.com/careers/" target="_blank">Facebook</a>.</p>
         <ul class="contact">
           <li>
             <a href="https://www.github.com/kmeht" target="_blank">
