Remove superfluous word.

--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
     <div class="intro-container">
       <div class="intro">
         <h1>Hi! My name is Kunal.</h1>
-        <p>I'm currently a software engineer on the <a href="https://hacklang.org/" target="_blank">Hack</a> team at <a href="https://www.facebook.com/careers/" target="_blank">Facebook</a>.</p>
+        <p>I'm a software engineer on the <a href="https://hacklang.org/" target="_blank">Hack</a> team at <a href="https://www.facebook.com/careers/" target="_blank">Facebook</a>.</p>
         <ul class="contact">
           <li>
             <a href="https://www.github.com/kmeht" target="_blank">
