--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
     <meta charset="utf-8">
     <title>Kunal Mehta (kmeht)</title>
     <meta name="author" content="Kunal Mehta">
-    <meta name="description" content="I'm a software engineer on the Messenger team at Facebook.">
+    <meta name="description" content="I'm a software engineer on the Hack team at Facebook.">
     <meta name="viewport" content="width=device-width">
     <link href="https://fonts.googleapis.com/css?family=Source+Sans+Pro:400,200,200italic,300,300italic,400italic,600,600italic,700,700italic,900italic,900" rel="stylesheet" type="text/css">
     <link href="/style.css" rel="stylesheet" type="text/css">
